--- a/style.css
+++ b/style.css
@@ -9,10 +9,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Roboto;
 }
 
 body {
     margin: 10vh 10vw;
+    text-align: center;
 }
 /*------------------  Class Styling  ------------------*/
 #result {
@@ -25,7 +27,9 @@ h1 {
     font-size: 3em ;
 }
 
-.flake {
+.SnowFlake {
+    position: relative;
     height: 3em;
+    width: 3em;
     fill: var(--Christmass-white);
 }
